--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1635,12 +1635,20 @@ input, select, textarea {
 		.image.fit {
 			display: block;
 			width: 100%;
+			height: 100%;
 		}
 
 		.image.featured {
 			display: block;
 			width: 100%;
-			margin: 0 0 2em 0;
+			margin: 30px 0 0 0;
+			border-radius: 15px; 
+		}
+
+		.image.photo {
+			display: block;
+			width: 100%;
+			border-radius: 15px;
 		}
 
 		.image.left {
@@ -1717,6 +1725,7 @@ input, select, textarea {
 		.button.large {
 			font-size: 1.5em;
 			letter-spacing: -0.025em;
+			background-color: #293bd6;
 		}
 
 		input[type="button"].alt,
@@ -1918,7 +1927,7 @@ input, select, textarea {
 	}
 
 		.box.style1 {
-			padding: 3em 2em 3.5em 2em;
+			padding: 3em 2em 2em 2em;
 		}
 
 			.box.style1 h3 {
@@ -2362,7 +2371,7 @@ input, select, textarea {
 					position: relative;
 					left: 20px;
 					top: 20px;
-					margin: -50px 0 50px -40px;
+					margin: 0px 0px 0px 0px;
 					width: auto;
 				}
 
@@ -2443,3 +2452,7 @@ input, select, textarea {
 					}
 
 	}
+
+.work {
+	font-size: 2.5em;
+}
