--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,6 +226,7 @@ input, select, textarea {
 	.container {
 		margin: 0 auto;
 		max-width: calc(100% - 50px);
+		/* max-width: 100%; */
 		width: 1200px;
 	}
 
@@ -1640,9 +1641,12 @@ input, select, textarea {
 
 		.image.featured {
 			display: block;
-			width: 100%;
-			margin: 30px 0 0 0;
-			border-radius: 15px; 
+			max-width: 100%;
+			max-height: 100%;
+			/* margin: 30px 0 0 0; */
+			/* margin-left: auto;
+			margin-right: auto; */
+			/* border-radius: 15px;  */
 		}
 
 		.image.photo {
@@ -1927,11 +1931,26 @@ input, select, textarea {
 	}
 
 		.box.style1 {
-			padding: 3em 2em 2em 2em;
+			padding: 0em;
+			padding-top: 0.25em;
+			justify-content: center;
 		}
+		.box.style3 {
+			padding: 0em;
+			padding-top: 2em;
+			text-align: left;
+			padding-left: 2em;
+			padding-right: 2em;
+		}
+		
+		/* .box.picture{
+			max-width: 100%;
+			max-height: 100%;
+		} */
 
 			.box.style1 h3 {
-				margin-bottom: 0.5em;
+				margin-bottom: 0.35em;
+				margin-top: 0.5em;
 			}
 
 		.box.style2 h3 {
@@ -1998,7 +2017,7 @@ input, select, textarea {
 	.wrapper {
 		background-image: url("images/bg.png");
 		box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.05), inset 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
-		padding: 8em 0 8em 0;
+		padding: 2em 0 2em 0;
 		text-align: center;
 	}
 
@@ -2114,7 +2133,7 @@ input, select, textarea {
 	}
 
 	#top {
-		padding: 10em 0 10em 0;
+		padding: 6em 0 6em 0;
 		text-align: left;
 	}
 
@@ -2205,7 +2224,7 @@ input, select, textarea {
 		/* Wrappers */
 
 			.wrapper {
-				padding: 5em 0 5em 0;
+				padding: 2em 0 2em 0;
 				text-align: center;
 			}
 
@@ -2217,7 +2236,7 @@ input, select, textarea {
 		/* Articles */
 
 			#top {
-				padding: 8em 0;
+				padding: 2em 0;
 			}
 
 				#top .image {
@@ -2247,7 +2266,7 @@ input, select, textarea {
 
 /* Small */
 
-	@media screen and (max-width: 736px) {
+	@media screen and (max-width: 100px) {
 
 		/* Basic */
 
@@ -2376,9 +2395,11 @@ input, select, textarea {
 				}
 
 				.box.style1 {
-					max-width: 32em;
+					max-width: 100%;
+					max-height: 100%;
 					margin-left: auto !important;
 					margin-right: auto !important;
+					justify-content: center;
 				}
 
 				.box.style2 {
@@ -2455,4 +2476,53 @@ input, select, textarea {
 
 .work {
 	font-size: 2.5em;
+}
+
+.line {
+	margin-top: 0em;
+	margin-bottom: 1em;
+	margin-left: 4em;
+	margin-right: 4em;
+}
+.line2 {
+	margin-top: 0em;
+	margin-bottom: 2em;
+	/* margin-right: 2em; */
+	/* padding-bottom: 2em; */
+}
+.focus {
+	color: #293bd6;
+}
+
+.text-center {
+	text-align: center
+}
+
+.skills {
+	width: 16.66667%;
+	margin-left: 0;
+	padding: 25px 0 0 0;
+}
+
+.skillsimage{
+	margin: 0 auto;
+  max-height: 100px;
+  padding-bottom: 10px;
+  text-align: center;
+  vertical-align: middle;
+  display: table-cell;
+}
+@media screen and (max-width: 600px) {
+	.skills {
+		width: 33.3333%;
+		margin-left: 0;
+		padding: 25px 0 0 0;
+	}
+}
+@media screen and (max-width: 350px) {
+	.skills {
+		width: 50%;
+		margin-left: 0;
+		padding: 25px 0 0 0;
+	}
 }
